--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,14 +1,22 @@
 {
   "manifest_version": 2,
   "name": "shrtlnk",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "permissions": [
     "activeTab",
     "clipboardWrite"
   ],
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": {
+      "19": "link_19.png",
+      "38": "link_38.png"
+    },
     "default_popup": "popup.html"
+  },
+  "icons": {
+    "16": "icon_16.png",
+    "48": "icon_48.png",
+    "128": "icon_128.png"
   },
 
   "description": "Shorter links",
