--- a/app/manifest.json
+++ b/app/manifest.json
@@ -4,14 +4,19 @@
   "version": "1.3.2",
   "permissions": [
     "activeTab",
-    "clipboardWrite"
+    "clipboardWrite",
+    "declarativeContent"
   ],
-  "browser_action": {
+  "page_action": {
     "default_icon": {
       "19": "link_19.png",
       "38": "link_38.png"
     },
     "default_popup": "popup.html"
+  },
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
   },
   "icons": {
     "16": "icon_16.png",
