Shared regex between linking & matching
Move regex/shortened version from a Map to two ordered Arrays.
Allows the URL filtering done by background.js to use urlMatches for
its declarativeContent and share the regex defined in regex.js

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -15,7 +15,10 @@
     "default_popup": "popup.html"
   },
   "background": {
-    "scripts": ["background.js"],
+    "scripts": [
+      "regex.js",
+      "background.js"
+    ],
     "persistent": false
   },
   "icons": {
